HDX-6717 stopping filter toggle from shifting postion while scrolling
version 1.38.11-b3

--- a/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/search/search-light.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/hdx-styles/src/common/less/light/search/search-light.less
@@ -6,11 +6,12 @@
   background-color: @extraLightGrayColor;
 
   .show-filters {
-    position: absolute;
-    right: 20px;
-    top: 110px;
-    z-index: 999;
+    position: relative;
     a {
+      position: absolute;
+      right: 20px;
+      top: 10px;
+      z-index: 999;
       .sourceSansProFont(600, 14px);
     }
 
